# semantic-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
config/: base.yaml
semantic-core/: Cargo.toml
semantic-core/examples/: generate_fixture.rs
semantic-core/src/: data_source.rs  lib.rs  semantic_configuration.rs  semantic_layer.rs
semantic-core/src/data_source/: parquet.rs
semantic-core/src/semantic_configuration/: aggregate.rs  dimension_configuration.rs  field.rs  metric_configuration.rs  model_configuration.rs  table.rs
semantic-core/src/semantic_layer/: context.rs  dimension.rs  filter.rs  layer_info.rs  metric.rs  query.rs  query_result.rs  semantic_layer_context.rs  semantic_layer_info.rs
semantic-core/src/semantic_layer/context/: factory.rs
semantic-core/src/semantic_layer/layer_info/: aggregate.rs  dimension_configuration.rs  field.rs  metric_configuration.rs  model_configuration.rs  table.rs  title.rs
semantic-core/src/semantic_layer/query/: dimension.rs  metric.rs
semantic-core/src/semantic_layer/query_result/: column.rs  column_meta.rs  column_value.rs  result_row.rs  result_value.rs  value_type.rs
semantic-core/src/semantic_layer/semantic_layer_info/: dimension_configuration.rs  metric_configuration.rs  model_configuration.rs  table.rs
semantic-gateway-server/: Cargo.toml
semantic-gateway-server/src/: configuration.rs  infrastructure.rs  main.rs  server_arguments.rs  web_server.rs
semantic-gateway-server/src/infrastructure/: model_reader.rs  tracing.rs
semantic-gateway-server/src/web_server/: api.rs  error.rs
(+11 files in other folders)
