[package]
name = "semantic-core"
version = "0.1.0"
edition = "2024"
authors = ["Raman Zanko"]

[dependencies]
serde = { workspace = true }
datafusion = "52"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
