[package]
name = "semantic-gateway-server"
version = "0.1.0"
edition = "2024"
authors = ["Raman Zanko"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_yaml = { workspace = true }
semantic-core = { path = "../semantic-core"}
thiserror = { workspace = true }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "chrono"] }
config = "0.15"
serde = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
